Sort of fix scrolling if the sidebar content doesn't fit

--- a/src/fontra/views/fontoverview/fontoverview.css
+++ b/src/fontra/views/fontoverview/fontoverview.css
@@ -18,6 +18,7 @@ body {
   padding: 1em 1em 1em 1em;
   background-color: var(--ui-element-background-color);
   height: calc(100vh - var(--top-bar-height));
+  overflow: auto;
 }
 
 .font-overview-sidebar-shadow-box {
